# scacchiera_final

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Gamers.cpp  Gamers.h  Makefile  PTE.cpp  Pieces.cpp  Pieces.h  bot_bot_game_log.txt  chessBoard.cpp  chessBoard.h  cmake_install.cmake  human_bot_game_log.txt  log25.txt  replay  replayMain.cpp  scacchiera  scacchieraMain.cpp
